style: Updated compact view to display just "of {pagecount} instead of page {page} of {pagecount} after drop-down to avoid word wrapping.

--- a/Nucleus.Web/Shared/Controls/Views/PagingControl.css
+++ b/Nucleus.Web/Shared/Controls/Views/PagingControl.css
@@ -91,7 +91,8 @@
 
 .nucleus-paging-control.compact .nucleus-pagingcontrol-pagedropdown
 {
-	margin-left: 0.5em;
+  margin-left: 0;
+	margin-right: 0.5em;
 }
 
 .nucleus-paging-control .nucleus-pagingcontrol-pagesizedropdown, .nucleus-paging-control .nucleus-pagingcontrol-pagedropdown
